# blood

./: .gitignore  .perf_history.json  CHECKLIST.md  CLAUDE.md  CONCURRENCY.md  CONTENT_ADDRESSED.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEVELOPMENT.md  DIAGNOSTICS.md  DISPATCH.md  FFI.md  FORMAL_SEMANTICS.md  GAP-ANALYSIS.md  GOVERNANCE.md  GRAMMAR.md  IMPLEMENTATION_STATUS.md  MEMORY_MODEL.md  QUALITY_PROFILE.md  README.md  ROADMAP.md  SPECIFICATION.md  STDLIB.md  bootstrap-cycle-prompt.md  build_first_gen_blood.sh  naming.md
.github/: PULL_REQUEST_TEMPLATE.md  TRIAGE.md
blood-runtime/: Cargo.toml
blood-tools/: Cargo.toml
blood-tools/fmt/src/: config.rs  formatter.rs  lib.rs  main.rs
blood-tools/lsp/: Cargo.toml
blood-tools/lsp/src/: analysis.rs  backend.rs  capabilities.rs  diagnostics.rs  document.rs  handlers.rs  lib.rs  semantic_tokens.rs
blood-tools/lsp/tests/: integration_tests.rs
blood-tools/ucm/: Cargo.toml
blood-tools/ucm/src/: codebase.rs  hash.rs  lib.rs  main.rs  names.rs  storage.rs  sync.rs  test_runner.rs
bloodc/: Cargo.toml
bootstrap/: README.md
compiler-rust/: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md
compiler-rust/blood-tools/fmt/: Cargo.toml
docs/: BLOOD_RUST_FEEDBACK.md  KNOWN_LIMITATIONS.md  REVIEW.md  TUTORIAL.md
examples/: algebraic_effects.blood  array_pattern_test.blood  basic_array.blood  blood_lexer.blood  concurrent_fibers.blood  config_parser.blood  const_add.blood  const_simple.blood  content_addressing.blood  ffi_interop.blood  forall_types.blood  generational_memory.blood  gpio_driver.blood  hello.blood  http_client.blood  math_algorithms  math_algorithms.blood  minimal_effect.blood  multi_perform_test.blood  multi_shot_resume.blood  multiple_dispatch.blood  nbody_benchmark.blood  nested_handler_test.blood  non_tail_resume.blood  pipe_test.blood  record_types.blood  simple_array_match.blood  simple_deep.blood  simple_effect_test  simple_effect_test.blood  simple_match.blood  simple_tuple.blood  slice_pattern_test.blood  spectral_norm_benchmark.blood  state_machine.blood  test2.blood  test_framework.blood  tuple_match_nobind.blood  tuple_pass.blood  (+1 more)
src/bootstrap/blood-tools/: Cargo.toml
src/bootstrap/blood-tools/fmt/src/: formatter.rs  main.rs  printer.rs  tokens.rs
src/bootstrap/blood-tools/lsp/: Cargo.toml
src/bootstrap/blood-tools/lsp/src/: analysis.rs  backend.rs  capabilities.rs  diagnostics.rs  document.rs  handlers.rs  lib.rs  main.rs  semantic_tokens.rs
src/bootstrap/blood-tools/lsp/tests/: integration_tests.rs
src/bootstrap/blood-tools/ucm/: Cargo.toml
src/bootstrap/blood-tools/ucm/src/: codebase.rs  hash.rs  lib.rs  main.rs  names.rs  storage.rs  sync.rs  test_runner.rs
(+1969 files in other folders)
