[workspace]
resolver = "2"
members = [
    "lsp",
    "fmt",
    "ucm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blood-lang/blood"

[workspace.dependencies]
# Blood crates
bloodc = { path = "../bloodc" }
blood-std = { path = "../blood-std" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
