[package]
name = "blood-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code formatter for Blood"

[[bin]]
name = "blood-fmt"
path = "src/main.rs"

[lib]
name = "blood_fmt"
path = "src/lib.rs"

[dependencies]
bloodc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4.4", features = ["derive"] }

# Formatting
unicode-width = "0.1"
