[package]
name = "blood-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for Blood"

[[bin]]
name = "blood-lsp"
path = "src/main.rs"

[lib]
name = "blood_lsp"
path = "src/lib.rs"

[dependencies]
bloodc.workspace = true
blood-fmt = { path = "../fmt" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
string-interner.workspace = true

# LSP specific
tower-lsp = "0.20"
dashmap = "6.1"
ropey = "1.6"

[dev-dependencies]
tempfile = "3"
